--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.cs3318_assigment3/com.example.cs3318_assigment3.HelloApplication
+                            <mainClass>com.example.cs3318_assigment3/com.example.cs3318_assigment3.Model
                             </mainClass>
                         </configuration>
                     </execution>
